# GeminiAgent

./: .gitignore  agent_team_collaboration.md  arch.md  arch2.md  arch3.md  arch4.md  arch5.md  docker-compose.yml  multi_agent_architecture.md
hello-agents/: README.md  pyproject.toml  test_report.html
hello-agents/docs/: process_model.md  program_model.md
hello-agents/examples/: basic_chat.py  memory_demo.py  rag_demo.py  team_solve.py
hello-agents/hello_agents/: __init__.py  agent.py  config.py
hello-agents/hello_agents/context/: __init__.py  builder.py  compress.py  gather.py  select.py  session_state.py  structure.py
hello-agents/hello_agents/hooks/: __init__.py  events.py  registry.py
hello-agents/hello_agents/mcp/: __init__.py  client.py  plugin.py  registry.py  router.py
hello-agents/hello_agents/memory/: __init__.py  base.py  embedding.py  events.py  gc.py  manager.py  reflection.py  router.py
hello-agents/hello_agents/multi_agent/: __init__.py  mailbox.py  peer.py  protocol.py  registry.py  worker.py
hello-agents/hello_agents/permissions/: __init__.py  deny_list.py  gate.py  policy.py
hello-agents/hello_agents/planner/: __init__.py  planner.py
hello-agents/hello_agents/prompt/: __init__.py  builder.py  loader.py  sections.py
hello-agents/hello_agents/rag/: __init__.py  document.py  knowledge_base.py  pipeline.py
hello-agents/hello_agents/recovery/: __init__.py  checkpoint.py  fallback.py  retry.py
hello-agents/hello_agents/skills/: __init__.py  loader.py  registry.py
hello-agents/tests/: conftest.py  run_tests.sh
(+88 files in other folders)
