[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "hello-agents"
version = "0.2.0"
description = "An OpenAI-compatible agent with a multi-tier memory system and RAG capabilities"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.30.0",
    "pydantic-settings>=2.3.0",
    "tavily-python>=0.3.0",
    "qdrant-client>=1.9.0",
    "neo4j>=5.20.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.26.0",
    "aiofiles>=23.2.1",
    "pypdf>=4.3.0",
    "python-docx>=1.1.0",
    "markdown>=3.6",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff.lint]
select = ["E", "F", "I"]
